[metadata]
name = git2net
version = 1.6.2
author = Christoph Gote
author_email = cgote@ethz.ch
license = AGPL-3.0+
description = An OpenSource Python package for the extraction of fine-grained and time-stamped co-editing networks from git repositories.
keywords =
    co-editing
    networks
    repository
    mining
    network
    analysis
url = https://gotec.github.io/git2net/
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    pandas
    tqdm>=4.27.0
    numpy
    scipy
    python-levenshtein
    pathpy2>=2.2.0
    lizard
    pydriller>=2.0.0
    gambit-disambig
    setuptools
    pygments

[options.entry_points]
console_scripts = git2net = git2net.command_line:main

[options.package_data]
git2net =
    helpers/binary-extensions/binary-extensions.json
