[metadata]
name = git2net
version = 1.8.0
author = Christoph Gote
author_email = cgote@ethz.ch
license = AGPL-3.0+
description = An OpenSource Python package for the extraction of fine-grained and time-stamped co-editing networks from git repositories.
keywords =
    co-editing
    network
    repository
    mining
    network-analysis
    git
url = https://gotec.github.io/git2net/
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    pandas~=2.2.2
    tqdm~=4.66.4
    numpy~=2.0.0
    scipy~=1.13.1
    python-levenshtein~=0.25.1
    pathpy2~=2.2.0
    lizard~=1.17.10
    pydriller~=2.6
    gambit-disambig>=1.0.4
    setuptools~=70.1.0
    pygments~=2.18.0
    networkx~=3.3

[options.entry_points]
console_scripts = git2net = git2net.command_line:main

[options.package_data]
git2net =
    helpers/binary-extensions/binary-extensions.json
